--- a/CodecampSDQ2016/Droid/Properties/AndroidManifest.xml
+++ b/CodecampSDQ2016/Droid/Properties/AndroidManifest.xml
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.megsoftconsulting.codecampsdq">
 	<uses-sdk android:minSdkVersion="15" />
+	<uses-permission android:name="android.permission.INTERNET" />
 	<application android:icon="@drawable/icon" android:label="CodeCampSDQ"></application>
 </manifest>
