--- a/CodecampSDQ2016/CodecampSDQ2016/packages.config
+++ b/CodecampSDQ2016/CodecampSDQ2016/packages.config
@@ -12,6 +12,7 @@
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="portable-net45+win+wp80+MonoTouch10+MonoAndroid10+xamarinmac20+xamarinios10" />
   <package id="Microsoft.Bcl.Compression" version="3.9.85" targetFramework="portable-net45+win+wp80+MonoTouch10+MonoAndroid10+xamarinmac20+xamarinios10" />
   <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="portable45-net45+win8+wp8" />
+  <package id="modernhttpclient" version="2.4.2" targetFramework="portable-net45+win+wp80+MonoTouch10+MonoAndroid10+xamarinmac20+xamarinios10" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="portable-net45+win+wp80+MonoTouch10+MonoAndroid10+xamarinmac20+xamarinios10" />
   <package id="PropertyChanged.Fody" version="1.50.3" targetFramework="portable-net45+win+wp80+MonoTouch10+MonoAndroid10+xamarinmac20+xamarinios10" developmentDependency="true" />
   <package id="Rx-Core" version="2.2.5" targetFramework="portable45-net45+win8+wp8" />
